force-app/main/default/objects/Case/fields/FimTrabalhoSLA__c.field-meta.xml
<CustomField>
    <fullName>FimTrabalhoSLA__c</fullName>
    <label>Fim do trabalho SLA</label>
    <type>DateTime</type>
</CustomField>