force-app/main/default/objects/Case/fields/InicioPausaSLA__c.field-meta.xml
<CustomField>
    <fullName>InicioPausaSLA__c</fullName>
    <label>Início da pausa SLA</label>
    <type>DateTime</type>
</CustomField>