force-app/main/default/objects/Case/fields/InicioTrabalhoSLA__c.field-meta.xml
<CustomField>
    <fullName>InicioTrabalhoSLA__c</fullName>
    <label>Início do trabalho SLA</label>
    <type>DateTime</type>
</CustomField>