force-app/main/default/objects/Case/fields/PrimeiroAtendimentoEm__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroAtendimentoEm__c</fullName>
    <label>Primeiro atendimento em</label>
    <type>DateTime</type>
</CustomField>