force-app/main/default/objects/Case/fields/PrioridadeSLA__c.field-meta.xml
<CustomField>
    <fullName>PrioridadeSLA__c</fullName>
    <label>Prioridade SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
                <default>true</default>
                <label>P2</label>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>