force-app/main/default/objects/Case/fields/SLAAtendimentoHoras__c.field-meta.xml
<CustomField>
    <fullName>SLAAtendimentoHoras__c</fullName>
    <formula>2</formula>
    <label>SLA Atendimento (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>