force-app/main/default/objects/Case/fields/SLAAtendimentoPrazo__c.field-meta.xml
<CustomField>
    <fullName>SLAAtendimentoPrazo__c</fullName>
    <label>Prazo SLA atendimento</label>
    <type>DateTime</type>
</CustomField>