force-app/main/default/objects/Case/fields/SLAAtendimentoTempoRestanteUtilHoras__c.field-meta.xml
<CustomField>
    <fullName>SLAAtendimentoTempoRestanteUtilHoras__c</fullName>
    <inlineHelpText>Horas úteis restantes para concluir o primeiro atendimento.</inlineHelpText>
    <label>Tempo restante atendimento útil (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>