force-app/main/default/objects/Case/fields/SLAAtendimentoViolado__c.field-meta.xml
<CustomField>
    <fullName>SLAAtendimentoViolado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA atendimento violado</label>
    <type>Checkbox</type>
</CustomField>