force-app/main/default/objects/Case/fields/SLAFase__c.field-meta.xml
<CustomField>
    <fullName>SLAFase__c</fullName>
    <formula>IF(
    IsClosed,
    &quot;Concluído&quot;,
    IF(
        IsStopped,
        &quot;Pausado&quot;,
        IF(
            ISBLANK(PrimeiroAtendimentoEm__c),
            &quot;Atendimento&quot;,
            IF(
                ISBLANK(FimTrabalhoSLA__c),
                &quot;Trabalho&quot;,
                &quot;Concluído&quot;
            )
        )
    )
)</formula>
    <label>Fase do SLA</label>
    <type>Text</type>
</CustomField>