force-app/main/default/objects/Case/fields/SLAStatus__c.field-meta.xml
<CustomField>
    <fullName>SLAStatus__c</fullName>
    <formula>IF(
    AND(SLAAtendimentoViolado__c, SLATrabalhoViolado__c),
    &quot;Vencido - Atendimento e Trabalho&quot;,
    IF(
        SLAAtendimentoViolado__c,
        &quot;Vencido - Atendimento&quot;,
        IF(
            SLATrabalhoViolado__c,
            &quot;Vencido - Trabalho&quot;,
            IF(
                IsClosed,
                &quot;Concluído dentro do SLA&quot;,
                IF(IsStopped, &quot;Pausado&quot;, &quot;Dentro do prazo&quot;)
            )
        )
    )
)</formula>
    <label>Status do SLA</label>
    <type>Text</type>
</CustomField>