force-app/main/default/objects/Case/fields/SLATempoRestanteHoras__c.field-meta.xml
<CustomField>
    <fullName>SLATempoRestanteHoras__c</fullName>
    <formula>IF(
    OR(IsClosed, NOT(ISBLANK(FimTrabalhoSLA__c))),
    0,
    IF(
        ISBLANK(PrimeiroAtendimentoEm__c),
        IF(
            ISBLANK(SLAAtendimentoPrazo__c),
            NULL,
            MAX(0, (SLAAtendimentoPrazo__c - NOW()) * 24)
        ),
        IF(
            ISBLANK(SLATrabalhoPrazo__c),
            NULL,
            MAX(0, (SLATrabalhoPrazo__c - NOW()) * 24)
        )
    )
)</formula>
    <inlineHelpText>Tempo restante aproximado em horas corridas. Para SLA com Business Hours, use Tempo restante SLA útil (h).</inlineHelpText>
    <label>Tempo restante SLA corrido (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>