force-app/main/default/objects/Case/fields/SLATempoRestanteUtilHoras__c.field-meta.xml
<CustomField>
    <fullName>SLATempoRestanteUtilHoras__c</fullName>
    <inlineHelpText>Horas úteis restantes do SLA ativo: atendimento antes do primeiro atendimento e trabalho depois que o Case entra em trabalho.</inlineHelpText>
    <label>Tempo restante SLA útil (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>