force-app/main/default/objects/Case/fields/SLATrabalhoHoras__c.field-meta.xml
<CustomField>
    <fullName>SLATrabalhoHoras__c</fullName>
    <formula>CASE(
    TEXT(PrioridadeSLA__c),
    &quot;P0&quot;, 8,
    &quot;P1&quot;, 16,
    &quot;P2&quot;, 24,
    &quot;P3&quot;, 32,
    &quot;P4&quot;, 40,
    0
)</formula>
    <label>SLA Trabalho (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>