force-app/main/default/objects/Case/fields/SLATrabalhoPrazo__c.field-meta.xml
<CustomField>
    <fullName>SLATrabalhoPrazo__c</fullName>
    <label>Prazo SLA trabalho</label>
    <type>DateTime</type>
</CustomField>