force-app/main/default/objects/Case/fields/SLATrabalhoTempoRestanteUtilHoras__c.field-meta.xml
<CustomField>
    <fullName>SLATrabalhoTempoRestanteUtilHoras__c</fullName>
    <inlineHelpText>Horas úteis restantes para concluir o trabalho do Case.</inlineHelpText>
    <label>Tempo restante trabalho útil (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>