force-app/main/default/objects/Case/fields/SLATrabalhoViolado__c.field-meta.xml
<CustomField>
    <fullName>SLATrabalhoViolado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA trabalho violado</label>
    <type>Checkbox</type>
</CustomField>