force-app/main/default/objects/Case/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work principal</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Work principal</relationshipLabel>
    <relationshipName>CasesPrincipais</relationshipName>
    <type>Lookup</type>
</CustomField>