force-app/main/default/objects/Case/validationRules/BloquearAlteracaoPrioridadeSLA.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearAlteracaoPrioridadeSLA</fullName>
    <active>true</active>
    <description>Bloqueia alteração da prioridade de SLA após o início do trabalho, exceto para usuários com permissão customizada.</description>
    <errorConditionFormula>AND(
    ISCHANGED(PrioridadeSLA__c),
    NOT(ISBLANK(InicioTrabalhoSLA__c)),
    NOT($Permission.AlterarPrioridadeSLA)
)</errorConditionFormula>
    <errorDisplayField>PrioridadeSLA__c</errorDisplayField>
    <errorMessage>A prioridade do SLA não pode ser alterada após o início do trabalho.</errorMessage>
</ValidationRule>