force-app/main/default/objects/Case/validationRules/ObrigarPrioridadeSLA.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPrioridadeSLA</fullName>
    <active>true</active>
    <description>Exige preenchimento da prioridade de SLA no Case.</description>
    <errorConditionFormula>ISBLANK(TEXT(PrioridadeSLA__c))</errorConditionFormula>
    <errorDisplayField>PrioridadeSLA__c</errorDisplayField>
    <errorMessage>Informe a prioridade do SLA.</errorMessage>
</ValidationRule>