force-app/main/default/objects/Case/validationRules/ValidarOrigemWork.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarOrigemWork</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Work__c)), OR(ISBLANK(Work__r.Case__c), Work__r.Case__c &lt;&gt; Id))</errorConditionFormula>
    <errorDisplayField>Work__c</errorDisplayField>
    <errorMessage>Defina este Case como Case de origem da Work antes de associá-la como principal.</errorMessage>
</ValidationRule>