force-app/main/default/objects/Case/validationRules/ValidarWorkPrincipal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarWorkPrincipal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Work__c)), NOT(ISBLANK(Work__r.ParentWork__c)))</errorConditionFormula>
    <errorDisplayField>Work__c</errorDisplayField>
    <errorMessage>Selecione uma Work principal, sem Work pai.</errorMessage>
</ValidationRule>